// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetching conversion hosts is pending 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingProviders": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorFetchingTargetComputeResources": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "hasSufficientProviders": false,
  "isFetchingConversionHosts": true,
  "isFetchingProviders": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isFetchingTargetComputeResources": false,
  "isRejectedConversionHosts": false,
  "isRejectedProviders": false,
  "isRejectedTargetComputeResources": false,
  "isSavingSettings": false,
  "providers": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
  "targetComputeResources": Array [],
}
`;

exports[`fetching conversion hosts is rejected 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": "error",
  "errorFetchingProviders": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorFetchingTargetComputeResources": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "hasSufficientProviders": false,
  "isFetchingConversionHosts": false,
  "isFetchingProviders": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isFetchingTargetComputeResources": false,
  "isRejectedConversionHosts": true,
  "isRejectedProviders": false,
  "isRejectedTargetComputeResources": false,
  "isSavingSettings": false,
  "providers": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
  "targetComputeResources": Array [],
}
`;

exports[`fetching conversion hosts is successful 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [
    Object {
      "mock": "conversionHost",
    },
  ],
  "errorFetchingConversionHosts": null,
  "errorFetchingProviders": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorFetchingTargetComputeResources": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "hasSufficientProviders": false,
  "isFetchingConversionHosts": false,
  "isFetchingProviders": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isFetchingTargetComputeResources": false,
  "isRejectedConversionHosts": false,
  "isRejectedProviders": false,
  "isRejectedTargetComputeResources": false,
  "isSavingSettings": false,
  "providers": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
  "targetComputeResources": Array [],
}
`;

exports[`fetching servers is pending 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingProviders": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorFetchingTargetComputeResources": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "hasSufficientProviders": false,
  "isFetchingConversionHosts": false,
  "isFetchingProviders": false,
  "isFetchingServers": true,
  "isFetchingSettings": false,
  "isFetchingTargetComputeResources": false,
  "isRejectedConversionHosts": false,
  "isRejectedProviders": false,
  "isRejectedTargetComputeResources": false,
  "isSavingSettings": false,
  "providers": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
  "targetComputeResources": Array [],
}
`;

exports[`fetching servers is rejected 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingProviders": null,
  "errorFetchingServers": "error",
  "errorFetchingSettings": null,
  "errorFetchingTargetComputeResources": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": true,
  "fetchingSettingsRejected": false,
  "hasSufficientProviders": false,
  "isFetchingConversionHosts": false,
  "isFetchingProviders": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isFetchingTargetComputeResources": false,
  "isRejectedConversionHosts": false,
  "isRejectedProviders": false,
  "isRejectedTargetComputeResources": false,
  "isSavingSettings": false,
  "providers": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
  "targetComputeResources": Array [],
}
`;

exports[`fetching settings is pending 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingProviders": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorFetchingTargetComputeResources": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "hasSufficientProviders": false,
  "isFetchingConversionHosts": false,
  "isFetchingProviders": false,
  "isFetchingServers": false,
  "isFetchingSettings": true,
  "isFetchingTargetComputeResources": false,
  "isRejectedConversionHosts": false,
  "isRejectedProviders": false,
  "isRejectedTargetComputeResources": false,
  "isSavingSettings": false,
  "providers": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
  "targetComputeResources": Array [],
}
`;

exports[`fetching settings is rejected 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingProviders": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": "error",
  "errorFetchingTargetComputeResources": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": true,
  "hasSufficientProviders": false,
  "isFetchingConversionHosts": false,
  "isFetchingProviders": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isFetchingTargetComputeResources": false,
  "isRejectedConversionHosts": false,
  "isRejectedProviders": false,
  "isRejectedTargetComputeResources": false,
  "isSavingSettings": false,
  "providers": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
  "targetComputeResources": Array [],
}
`;

exports[`fetching settings is successful 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingProviders": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorFetchingTargetComputeResources": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "hasSufficientProviders": false,
  "isFetchingConversionHosts": false,
  "isFetchingProviders": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isFetchingTargetComputeResources": false,
  "isRejectedConversionHosts": false,
  "isRejectedProviders": false,
  "isRejectedTargetComputeResources": false,
  "isSavingSettings": false,
  "providers": Array [],
  "savedSettings": Object {
    "max_concurrent_tasks_per_host": 10,
  },
  "savingSettingsRejected": false,
  "servers": Array [],
  "targetComputeResources": Array [],
}
`;

exports[`saving settings is pending 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingProviders": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorFetchingTargetComputeResources": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "hasSufficientProviders": false,
  "isFetchingConversionHosts": false,
  "isFetchingProviders": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isFetchingTargetComputeResources": false,
  "isRejectedConversionHosts": false,
  "isRejectedProviders": false,
  "isRejectedTargetComputeResources": false,
  "isSavingSettings": true,
  "providers": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
  "targetComputeResources": Array [],
}
`;

exports[`saving settings is rejected 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingProviders": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorFetchingTargetComputeResources": null,
  "errorSavingSettings": "error",
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "hasSufficientProviders": false,
  "isFetchingConversionHosts": false,
  "isFetchingProviders": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isFetchingTargetComputeResources": false,
  "isRejectedConversionHosts": false,
  "isRejectedProviders": false,
  "isRejectedTargetComputeResources": false,
  "isSavingSettings": false,
  "providers": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": true,
  "servers": Array [],
  "targetComputeResources": Array [],
}
`;

exports[`saving settings is successful 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingProviders": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorFetchingTargetComputeResources": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "hasSufficientProviders": false,
  "isFetchingConversionHosts": false,
  "isFetchingProviders": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isFetchingTargetComputeResources": false,
  "isRejectedConversionHosts": false,
  "isRejectedProviders": false,
  "isRejectedTargetComputeResources": false,
  "isSavingSettings": false,
  "providers": Array [],
  "savedSettings": Object {
    "max_concurrent_tasks_per_host": 10,
  },
  "savingSettingsRejected": false,
  "servers": Array [],
  "targetComputeResources": Array [],
}
`;

exports[`sets default state 1`] = `
Object {
  "conversionHostWizardMounted": false,
  "conversionHostWizardVisible": false,
  "conversionHosts": Array [],
  "errorFetchingConversionHosts": null,
  "errorFetchingProviders": null,
  "errorFetchingServers": null,
  "errorFetchingSettings": null,
  "errorFetchingTargetComputeResources": null,
  "errorSavingSettings": null,
  "fetchingServersRejected": false,
  "fetchingSettingsRejected": false,
  "hasSufficientProviders": false,
  "isFetchingConversionHosts": false,
  "isFetchingProviders": false,
  "isFetchingServers": false,
  "isFetchingSettings": false,
  "isFetchingTargetComputeResources": false,
  "isRejectedConversionHosts": false,
  "isRejectedProviders": false,
  "isRejectedTargetComputeResources": false,
  "isSavingSettings": false,
  "providers": Array [],
  "savedSettings": Object {},
  "savingSettingsRejected": false,
  "servers": Array [],
  "targetComputeResources": Array [],
}
`;
